--- a/urls.cfg
+++ b/urls.cfg
@@ -1,5 +1,4 @@
-google=https://google.com
-hn=https://news.ycombinator.com
-reddit=https://reddit.com
-statsig=https://www.statsig.com
-worldclock=http://worldclockapi.com/api/json/utc/now
+main bot panel=https://app.maomy.top/
+short panel=https://short.maomy.top/
+work=https://work.maomy.top/
+main bot web=https://maomy.top
